--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=siradaskripsi.my.id
 DB_PORT=3306
-DB_DATABASE=db_surat_adat_v2
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=siradask_db_sirada
+DB_USERNAME=siradask_lingling
+DB_PASSWORD=siradaskripsi
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
